--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,104 @@
-torch == 2.2.1+cu121
-tqdm == 4.66.5
-sentence-transformers == 3.1.1
-numpy == 1.24.1
-matplotlib == 3.9.0
+accelerate==0.34.2
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.8
+aiosignal==1.3.1
+asttokens==2.4.1
+async-timeout==4.0.3
+attrs==24.2.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+comm==0.2.2
+contourpy==1.2.1
+cycler==0.12.1
+datasets==3.0.1
+debugpy==1.8.1
+decorator==5.1.1
+dill==0.3.8
+einops==0.8.0
+et_xmlfile==2.0.0
+exceptiongroup==1.2.0
+executing==2.0.1
+filelock==3.9.0
+flash_attn==2.6.3
+fonttools==4.53.1
+frozenlist==1.4.1
+fsspec==2024.6.1
+huggingface-hub==0.24.0
+humanize==4.9.0
+idna==3.6
+importlib_metadata==7.1.0
+importlib_resources==6.4.0
+iniconfig==2.0.0
+ipykernel==6.29.3
+ipython==8.18.1
+javalang==0.13.0
+jedi==0.19.1
+Jinja2==3.1.2
+joblib==1.3.2
+jupyter_client==8.6.1
+jupyter_core==5.7.2
+kiwisolver==1.4.5
+MarkupSafe==2.1.3
+matplotlib==3.9.0
+matplotlib-inline==0.1.6
+mpmath==1.3.0
+multidict==6.1.0
+multiprocess==0.70.16
+nest-asyncio==1.6.0
+networkx==3.2.1
+ninja==1.11.1.1
+nltk==3.8.1
+numpy==1.24.1
+openpyxl==3.1.5
+packaging==24.0
+pandas==2.2.1
+parso==0.8.3
+pillow==10.2.0
+plac==1.4.3
+platformdirs==4.2.0
+pluggy==1.5.0
+prompt-toolkit==3.0.43
+psutil==5.9.8
+pure-eval==0.2.2
+pyarrow==17.0.0
+Pygments==2.17.2
+pyparsing==3.1.2
+pytest==8.2.2
+python-dateutil==2.9.0.post0
+pytz==2024.1
+pywin32==306
+PyYAML==6.0.1
+pyzmq==25.1.2
+regex==2024.5.15
+requests==2.32.3
+safetensors==0.4.3
+scikit-learn==1.4.1.post1
+scipy==1.12.0
+sentence-transformers==3.1.1
+six==1.16.0
+spiral @ git+https://github.com/casics/spiral.git@0e75418cda7635f151fedff035b7b75799ccbe43
+stack-data==0.6.3
+sympy==1.12
+termcolor==2.4.0
+threadpoolctl==3.4.0
+tiktoken==0.7.0
+tokenizers==0.19.1
+tomli==2.0.1
+torch==2.2.1+cu121
+torchaudio==2.2.1+cu121
+torchdata==0.7.1
+torchtext==0.17.1
+torchvision==0.17.1+cu121
+tornado==6.4
+tqdm==4.66.5
+traitlets==5.14.2
+transformers==4.42.4
+typing_extensions==4.8.0
+tzdata==2024.1
+urllib3==2.2.1
+wcwidth==0.2.13
+xxhash==3.5.0
+yarl==1.13.1
+zipp==3.18.1
